--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -31,45 +31,13 @@
                                     <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="active" caption="Active" type="boolean" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="dateApproved" caption="Date Approved" type="date" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="dateApproved" caption="Date Approved" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date"
+                                    readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="approvedBy" caption="Approved By" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="reviewer" caption="Reviewer" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="date" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="230px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="editRow()" disabled="false"></wm-grid-row-action>
-                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
-                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date"
+                                    readonly="false"></wm-grid-column>
                                 </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="" title="Vendor Review" formlayout="dialog" iconclass="wi wi-mode-edit" dataset="bind:Variables.ReviewVendorApprovals.dataSet" captionalign="left" captionposition="top" name="liveform2">
-                                    <wm-layoutgrid columns="3" name="layoutgrid3">
-                                        <wm-gridrow name="gridrow9">
-                                            <wm-gridcolumn columnwidth="4" name="gridcolumn18_1">
-                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
-                                                defaultvalue="Pending" required="true"></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                        <wm-gridrow name="gridrow8">
-                                            <wm-gridcolumn columnwidth="4" name="gridcolumn15">
-                                                <wm-form-field name="expiresDate" displayname="Expiration Date" show="true" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
-                                                datepattern="MM-dd-yyyy" mindate="bind:toDay | toDate: 'yyyy-MM-dd'" required="true"></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                    </wm-layoutgrid>
-                                    <wm-form-field name="approvedBy" displayname="Approved By" show="false" primary-key="false" generator="assigned" key="approvedBy" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentUserDetails.dataSet.email"
-                                    inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="datePApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
-                                    outputformat="yyyy-MM-dd" showbuttonbar="false" datepattern="yyyy-MM-dd"></wm-form-field>
-                                    <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" widget="select" placeholder="Select value"></wm-form-field>
-                                    <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value"></wm-form-field>
-                                    <wm-form-field name="reviewer" displayname="Reviewer" show="false" primary-key="false" generator="assigned" key="reviewer" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentUserDetails.dataSet.email"
-                                    inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="active" displayname="Active" show="false" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
-                                    placeholder=""></wm-form-field>
-                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="Variables.UpdateVendorStatusFromPending.invoke()" disabled="false"
-                                    type="button" update-mode="true"></wm-form-action>
-                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                </wm-liveform>
                             </wm-livegrid>
                         </wm-panel>
                     </wm-gridcolumn>
@@ -95,13 +63,13 @@
                                     <wm-layoutgrid columns="1" name="layoutgrid3_1">
                                         <wm-gridrow name="gridrow7">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn10">
-                                                <wm-form-field name="approvalStatus2" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
-                                                datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Approved" required="true"></wm-form-field>
+                                                <wm-form-field name="approvalStatus2" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" required="required" widget="select" maxchars="255"
+                                                placeholder="" dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Approved"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8_1">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn11">
-                                                <wm-form-field name="expiresDate" displayname="Expires Date" show="true" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"
+                                                <wm-form-field name="expiresDate" displayname="Expires Date" show="true" primary-key="false" generator="assigned" key="expiresDate" type="timestamp" widget="timestamp" placeholder="Select date" outputformat="timestamp"
                                                 mindate="bind:toDay | toDate: 'yyyy-MM-dd'"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -112,8 +80,8 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow2">
                                             <wm-gridcolumn name="gridcolumn2" columnwidth="12">
-                                                <wm-form-field name="dateAApproved" displayname="Date Approved" show="true" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
-                                                outputformat="yyyy-MM-dd"></wm-form-field>
+                                                <wm-form-field name="dateAApproved" displayname="Date Approved" show="true" primary-key="false" generator="assigned" key="dateApproved" type="timestamp" widget="timestamp" defaultvalue="CURRENT_DATE" placeholder="Select date"
+                                                outputformat="timestamp"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
@@ -149,16 +117,16 @@
                                     <wm-layoutgrid columns="1" name="layoutgrid4">
                                         <wm-gridrow name="gridrow10">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn13">
-                                                <wm-form-field name="approvalStatus3" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="" dataset="Pending,Approved,Suspended"
-                                                datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Suspended" required="true"></wm-form-field>
+                                                <wm-form-field name="approvalStatus3" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" required="required" widget="select" maxchars="255"
+                                                placeholder="" dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Suspended"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="expiresDate" displayname="Expires Date" show="false" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd" mindate="bind:toDay | toDate: 'yyyy-MM-dd'"></wm-form-field>
-                                    <wm-form-field name="dateSApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" outputformat="yyyy-MM-dd" placeholder="Select date"
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                                    <wm-form-field name="dateSApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="timestamp" widget="timestamp" outputformat="timestamp" placeholder="Select date"
                                     defaultvalue="CURRENT_DATE"></wm-form-field>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
-                                    placeholder=""></wm-form-field>
+                                    <wm-form-field name="expiresDate" displayname="Expires Date" show="false" primary-key="false" generator="assigned" key="expiresDate" type="timestamp" widget="timestamp" placeholder="Select date" outputformat="timestamp"
+                                    mindate="bind:toDay | toDate: 'yyyy-MM-dd'"></wm-form-field>
                                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="Variables.UpdateVendorStatusFromSuspended.invoke()" disabled="false"
                                     type="button" update-mode="true"></wm-form-action>
                                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
@@ -296,6 +264,40 @@
                     <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
                 </wm-grid>
             </wm-panel>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewPendingApprovals">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Information" iconclass="wi wi-file-text" name="dialogPendingApprovals">
+            <wm-dialogactions name="dialogactions2">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button2"></wm-button>
+            </wm-dialogactions>
+            <wm-layoutgrid name="layoutgrid7">
+                <wm-gridrow name="gridrow23">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn40" horizontalalign="center" padding=".5em unset">
+                        <wm-composite name="composite2">
+                            <wm-label class="col-md-3 control-label" name="label7" caption="Set Status" horizontalalign="left"></wm-label>
+                            <wm-container class="col-md-9" name="container2">
+                                <wm-select name="selectStatusFromPending" dataset="Pending,Approved,Suspended" datavalue="Pending"></wm-select>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow24">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn42" horizontalalign="center" padding=".5em unset">
+                        <wm-composite name="composite3">
+                            <wm-label class="col-md-3 control-label" name="label8" caption="Expiration Date" horizontalalign="left"></wm-label>
+                            <wm-container class="col-md-9" name="container3">
+                                <wm-datetime name="datetimeExpirationFormPending" mindate="bind:today" datepattern="MM-dd-yyyy"></wm-datetime>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow25">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn44" horizontalalign="center" padding=".5em unset">
+                        <wm-button class="btn-default btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateFromPending" on-click="Variables.UpdateVendorStatusFromPending.invoke()"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-dialog>
     </wm-view>
 </wm-page>
