--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -76,10 +76,10 @@
                                     <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="active" caption="Active" type="boolean" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="dateApproved" caption="Date Suspended" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="dateApproved" caption="Date Suspended" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="approvedBy" caption="Approved By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="reviewer" caption="Reviewer" type="string" primary-key="false" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date"
+                                    <wm-grid-column binding="expiresDate" caption="Expires Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date"
                                     readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogReviewSuspended.open()" disabled="false"></wm-grid-row-action>
