--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -13,7 +13,7 @@
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-assignment" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
-                        class="panel-primary" on-error="liveformVendorApplicationError($event, $operation, $data)">
+                        class="panel-primary" on-error="liveformVendorApplicationError($event, $operation, $data)" insertmessage="You have just been added to the new &quot;Company Admin&quot; role.  Please log out and back in to receive additional application functionality">
                             <wm-layoutgrid columns="3" name="layoutgrid3">
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
