--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -28,37 +28,29 @@
                         <wm-livegrid formlayout="dialog" name="livegrid2">
                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="false">
                                 <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="approvedBy" caption="Approved By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="dateApproved" caption="Applied On" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="active" caption="Active" type="boolean" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="reviewer" caption="Reviewer" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                <wm-grid-action key="addNewRow" display-name="Add Municipality" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Municipality" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                             </wm-grid>
-                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.VendorApprovalsData.dataSet" captionalign="left"
-                            captionposition="top" name="liveform2_12" insertmessage="">
+                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.VendorApprovalsData.dataSet"
+                            captionalign="left" captionposition="top" name="liveform2_12" insertmessage="">
                                 <wm-layoutgrid columns="1" name="layoutgrid3">
                                     <wm-gridrow name="gridrow11">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn12">
-                                            <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required" widget="select" placeholder="Select Municipality"
-                                            displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
-                                        </wm-gridcolumn>
-                                    </wm-gridrow>
-                                    <wm-gridrow name="gridrow1">
-                                        <wm-gridcolumn name="gridcolumn1" columnwidth="12">
-                                            <wm-form-field name="dateApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="timestamp" widget="timestamp" defaultvalue="CURRENT_DATE"></wm-form-field>
+                                            <wm-form-field name="municipalities" displayname="What municipality would you like to do business with?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required"
+                                            widget="select" placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
-                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentVendorObj.dataSet"
-                                datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
+                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                 <wm-form-field name="approvalStatus" displayname="Approval Status" show="false" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
                                 defaultvalue="Pending"></wm-form-field>
-                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
-                                placeholder=""></wm-form-field>
+                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentVendorObj.dataSet"
+                                datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
                                 <wm-form-action key="save" display-name="Submit" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null"
                                 type="button" update-mode="true"></wm-form-action>
                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
