Proofreading of Tab text. Files modified - [Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -143,7 +143,7 @@
                                     <wm-gridrow name="gridrow54">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn113">
                                             <wm-label padding="unset 0.5em" name="label26" caption="The following fees have been created for this form."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label57" caption="You may add unpaid fees to your basket by clicking on the cart under the “Actions” section in the grid."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label57" caption="You may add unpaid fees to your basket by clicking on the cart icon in the “Actions” area below."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow55">
@@ -231,8 +231,8 @@
                                     <wm-gridrow name="gridrow56">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn117">
                                             <wm-label padding="unset 0.5em" name="label27" caption="Please select the “Request Inspection” button to request an inspection."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label60" caption="If the button is greyed out, this means the current form status does not allow for payments."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly with any inspection related questions."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label60" caption="If the button is greyed out, this means the current form status does not allow for inspections."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly with any questions related to inspections."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow57">
@@ -256,10 +256,10 @@
                                 <wm-layoutgrid name="layoutgrid17">
                                     <wm-gridrow name="gridrow60">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn125">
-                                            <wm-label padding="unset 0.5em" name="label29" caption="The following locations have been added to this form."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label29" caption="The following locations have been associated with this form."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label61" caption="You may add or remove locations for this form."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label34" caption="Some forms allow for multiple locations while others may only allow a single location to be added."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label62" caption="You may also view location details by clicking on the magnifying glass located in the “Actions” section."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label62" caption="You may also view location details by clicking on the magnifying glass located in the “Actions” area below."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow61">
@@ -322,7 +322,7 @@
                                 <wm-layoutgrid name="layoutgrid18">
                                     <wm-gridrow name="gridrow62">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn129">
-                                            <wm-label padding="unset 0.5em" name="label35" caption="If this form is associated to a vendor, please add the vendor to the form by clicking the “Add Vendor” button."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label35" caption="If this form is associated to a vendor, please add the vendor to the form by clicking the “Add Vendor” button below."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow63">
@@ -350,7 +350,7 @@
                                     <wm-gridrow name="gridrow64">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn133">
                                             <wm-label padding="unset 0.5em" name="label31" caption="Please upload any related documents such as plans and engineering drawings by clicking “Add Attachment”."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label63" caption="You may view and markup files by clicking on the “Edit” pencil located in the “Actions” section."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label63" caption="You may view and markup files by clicking on the “Edit” pencil icon located in the “Actions” area below."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow65">
@@ -363,7 +363,7 @@
                                     <wm-gridrow name="gridrow66">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn137">
                                             <wm-label padding="unset 0.5em" name="label32" caption="You may add contacts for this form."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label64" caption="By adding a user as a contact they will have the ability to view the forms as well as the ability to complete transactions for the form."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label64" caption="By adding a user as a contact they will have the ability to both view the form and complete transactions for the form."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow67">
@@ -411,7 +411,7 @@
                                 <wm-layoutgrid name="layoutgrid21">
                                     <wm-gridrow name="gridrow68">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn141">
-                                            <wm-label padding="unset 0.5em" name="label33" caption="Below you will find a complete history to all form status updates."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label33" caption="Below you will find a complete history of all form status updates that have been performed."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow69">
