--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -620,7 +620,7 @@
                         <wm-label padding="unset 0.5em" caption="Unit Number" name="label17"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn79">
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.lot" name="label20"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.unitNumber" name="label20"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow74">
@@ -704,7 +704,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow45_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn104_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn104_1" padding="2em unset unset unset">
                         <wm-prefab prefabname="googlemaps" name="googlemaps2" address="streetNumber streetName city states.stateName" locations="bind:Widgets.gridLocation.selecteditem.gisrecords" markertype="Address" zoom="16"></wm-prefab>
                     </wm-gridcolumn>
                 </wm-gridrow>
