NewParcel/EditGIS- Subdivision field not filtered by municipality Files modified - [pages-config.json,ManageGISData.html,EditGISRecord.html]

--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -93,8 +93,7 @@
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn33_1">
                                                     <wm-container name="container2" class="col-xs-12" horizontalalign="left">
                                                         <wm-form-field name="subdivisions" displayname="Subdivision" show="true" primary-key="false" generator="assigned" key="subdivisions" type="list" is-related="true" widget="autocomplete" placeholder="Search by Subdivision Name or Short Code"
-                                                        displayexpression="subdivision" orderby="subdivision:asc" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" searchkey="subdivision,subShortCode" displaylabel="subdivision + ' ' + '(' + subShortCode + ')'"
-                                                        class="col-xs-11"></wm-form-field>
+                                                        displayexpression="subdivision" orderby="subdivision:asc" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" searchkey="subdivision" displaylabel="subdivision" class="col-xs-11"></wm-form-field>
                                                         <wm-icon name="icon1" iconclass="wi wi-search fa-2x" iconsize="20pt" class="col-xs-1 search-icon"></wm-icon>
                                                     </wm-container>
                                                 </wm-gridcolumn>
